<resources>
    <string name="app_name">Herbalyze</string>
    <string name="login_text">Login</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="have_account">Already have an account?</string>
    <string name="description">Description</string>
    <string name="username">Enter your username</string>
    <string name="img_desc">Image of a story</string>
    <string name="profile_image_desc">Profile Image for User</string>
    <string name="upload">Upload</string>
    <string name="add">Add</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="load_error">Loading error...</string>
    <string name="uploadAlert">Upload your image first!</string>
    <string name="uploadDescAlert">Upload the description first!</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="package_name">com.dayeeen.mystoryapp</string>
    <string name="message">Message:</string>
    <string name="incorrectEmail">Incorrect email format\n</string>
    <string name="emailTaken">Email has been registered, please use another email.</string>
    <string name="empty_image_alert">Please upload an image first...</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="login_success">Login Successful</string>
    <string name="cont">Continue</string>
    <string name="login_success_message">You have successfully logged in.</string>
    <string name="register_success">Registration successful!</string>
    <string name="register_success_message">Your account has been registered.</string>
    <string name="signup_here">Signup here.</string>
    <string name="logo_herbalyze">Logo Herbalyze</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="login_here">Login here.</string>
    <string name="plant_name">Nama Tanaman</string>
    <string name="saved_plants">Saved Plants</string>
    <string name="profile">Profile</string>
    <string name="slogan">Herbalyze: Elevate your health naturally</string>
    <string name="or">OR</string>
    <string name="your_web_client_id">914009778542-0ui5segiiaad8canv3phqoaabtom2h4p.apps.googleusercontent.com</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="google_sign_in">Connect with Google</string>
    <string name="recipe">Recipe:\n- Lorem ipsum\n- Dolor sit amet\n- Bla bla bla</string>
    <string name="usage">Dioles, dimakan, dikunyah, dll.</string>
    <string name="prediction_score">Tingkat Kemiripan: 99%</string>
    <string name="check_detail">Cek Rinciannya</string>
    <string name="reupload">Upload Ulang</string>
    <string name="still_processing_image">Sedang memproses gambar....</string>
    <string name="recipeName">Nama Resep</string>
    <string name="usageTitle">Cara Penggunaan:</string>
    <string name="benefits">Manfaat:</string>
    <string name="back_home">Kembali ke Beranda</string>
</resources>